--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,76 @@
-/* Acá va tu código */
+body {
+  background-image: url("img1.jpg");
+  font-family: 'Bree Serif', serif;
+  text-align: center;
+}
+
+/* change style of h1*/
+.title {
+  font-size: 30px;
+  color: rgb(59, 92, 134);
+  font-style: normal;
+  margin-bottom: 0;
+}
+
+.subtitle{
+  font-style: normal; 
+  color: rgb(59, 83, 122);
+  margin-top: 0;
+}
+
+#container {
+  font-size: 17px;
+  color: rgba(28, 134, 129, 0.8);
+  font-style: italic;
+  background-color: rgba(240, 208, 138, 0.7);
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
+  border: 50px 30px 90px 60px;;
+}
+
+.box{
+  font-family:'Bree Serif', serif;
+}
+ 
+#txt1{
+  margin-right: 30px;
+}
+
+#txt2{
+  margin-left: 30px;
+  font-family: 'Bree Serif', serif;
+}
+
+.titleOffset{
+  color: rgb(11, 104, 99); 
+  text-align: center;
+  text-shadow:
+  -1px -1px 0 #fff,  
+  1px -1px 0 #fff,
+  -1px 1px 0 #fff,
+  1px 1px 0 #fff;
+}
+
+#offSet {
+  height: 2rem;
+  width: 4rem;
+  text-align: center;
+  font-weight: bold;
+}
+  
+.button{
+  background-color: rgba(59,89, 152, 0.9);
+  display: inline-block;
+  font-family: 'Bree Serif', serif; 
+  color: rgb(247, 236, 236); 
+  padding: 12px  12px;
+  margin: 25px;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 100px;
+}
+
+.button:hover{
+  background-color:rgb(11, 104, 99, 0.9); 
+}
