--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,9 @@ html {
 
 .tittlep{ 
 color: rgb(59, 83, 122);
-float: left;
 margin: 1%;
+display: contents;
+
 }
 
 .title{
@@ -37,7 +38,7 @@ margin: 1%;
 
 .img1{
 
-  width: 77%;
+  width: 70vw;
   height: 20vh;
 }
 
@@ -48,14 +49,14 @@ margin: 1%;
   text-align: center;
   font-weight: 800;
   margin: 0 auto;
-  margin-left: 20%;
+
 }
 
 
 
 .box{
   display: inline;
-  margin-left: 10%;
+
 
 }
 
@@ -72,10 +73,6 @@ margin: 1%;
   font-weight: 800;
 }
 
-.set{
-  margin-left: 10%;
-
-}
 
 
 #offSet {
@@ -88,7 +85,7 @@ margin: 1%;
 
 .btns{
   display: flow-root;
-  margin-left: 10%;
+ 
 
 }
   
@@ -97,8 +94,7 @@ margin: 1%;
   display: inline-block;
   color: rgb(247, 236, 236); 
   padding: 1%;
-  margin: 6%;
-  margin-top: 3%;
+  margin: 3%;
   cursor: pointer;
   border-radius: 5px;
   width: 100px;
@@ -148,30 +144,32 @@ border: dotted rgb(59, 92, 134);
     
   }
   #title{
-    color: rgb(59, 92, 134);
-    font-weight: 700;
-    margin-bottom: 1%;
+    color: rgb(59, 83, 122);
+    padding-top: 3%;
+    font-size: medium;
+    width: inherit;
   }
   .tittlep{ 
     color: rgb(59, 83, 122);
-    float: center;
-    margin: 1%;
-    width: inherit;
+    width: unset;
+    display: contents;
+    flex-direction: column;
     }
 
   .img1 {
-    width: 50%;
-    height: 50%;
+    width: inherit;
   }
 
   .set{
+    margin-right: 5%;
     margin-left: 5%;
   
   }
 
   .btns{
-    display: table;
+    display: inline-flex;
     margin-top: 2%;
+    margin-bottom: 4%;
   
   }
 
@@ -182,16 +180,15 @@ border: dotted rgb(59, 92, 134);
   }
 
   .box{
-    display: contents;
-    margin-left: 10%;
+    display: inline-block;
+    ;
   
   }
 
   #container {
-    width: 60%;
+    width: 80vw;
     text-align: center;
-    margin-left: 20%;
-    font-size: small;
+    font-size: medium;
   }
 
 }
